' database/database-metrics.puml
@startuml Database metrics tables

' Aggregate
entity Aggregate {
  * aggregate_id : text
  * aggregate_category : enum('products','sales','transactions')
  --
  * aggregate_fn : enum('RECOUNT','SUMMATION')
  * aggregate_value : number
  aggregate_last_update : date
}

AggregateFN ||--|{ Aggregate

' TimeSerie
entity TimeSerie {
  * time_serie_id : number <<generated>>
  --
  * time_serie_slug : text
  * time_serie_category : enum('products','sales','transactions')
}

entity TimeSerieData {
  * time_serie_data_id : number <<generated>>
  --
  * time_serie_id : number <<FK>>
  * time_serie_data_value : number
  * time_serie_data_date : date
}

TimeSerie ||--o{ TimeSerieData

' Ranking
entity Ranking {
  * ranking_id : number <<generated>>
  --
  * ranking_slug : text
  * ranking_category : enum('products','sales','transactions')
  * ranking_value_title : text
}

entity RankingCompetitor {
  * ranking_competitor_id : uuid
  * ranking_id : number <<FK>>
  --
  * ranking_competitor_name : string
  * ranking_competitor_value : number
  * ranking_competitor_last_update : date
}

Ranking ||--o{ RankingCompetitor
@enduml
